# a2a-protocol-core

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
app/: main.py
app/adapters/: base.py  fednow.py  internal_ledger.py  xrpl.py
app/api/: routes.py
app/bridges/ap2/: __init__.py  bridge.py  models.py
app/core/: a2a_core.py  semantic_normalizer.py  signing.py
app/db/: database.py
app/services/: messages.py  payments.py  receipts.py  registry.py  reputation.py  resolver.py
examples/: agent_pay_alias.py  attest_byo_tx.py  screen_and_verify.py  trigger_payment_hook.py
specs/: A2A-001-core-messaging.md  A2A-002-identity-trust.md  A2A-003-capability-discovery.md  A2A-004-transport-bindings.md  A2A-005-policy-execution.md  A2A-006-receipts-audit.md  A2A-007-schema-registry.md  A2A-008-canonicalization.md  A2A-009-semantic-normalizer.md  A2A-010-network-architecture.md  A2A-020-agent-economy.md  A2A-030-payment-rails.md  A2A-031-financial-address-resolution.md  A2A-040-compute-execution.md  A2A-041-payment-hook.md  A2A-042-ap2-mandate-bridge.md  A2A-050-governance.md  A2A-060-reputation-trust.md  A2A-061-sdk-bridge.md  A2A-070-privacy-data-handling.md  A2A-080-observability-telemetry.md  A2A-090-conformance-test-vectors.md
src/a2a_protocol_core/: __init__.py  _retry.py  addressing.py  attestation_verify.py  canonical_hash.py  client.py  schemas.py  screen.py  semantic_normalizer.py  x402_pay.py
tests/: conftest.py  test_a2a_core.py  test_addressing.py  test_ap2_bridge.py  test_attestation_verify.py  test_canonical_hash.py  test_client.py  test_cross_language_vectors.py  test_pay_dispatch.py  test_payment_hook.py  test_payments.py  test_registry.py  test_resolver.py  test_retry.py  test_schemas.py  test_screen.py  test_semantic_normalizer.py  test_x402_pay.py
tests/vectors/: canonical_vectors.json  generate_vectors.py
