[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-protocol-core"
version = "0.2.1"
description = "Open, deterministic protocol core for the DNS of Money A2A payment surface (FAS-1 pay: addressing, canonical hashing, payment-hook client)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "DNS of Money" }]
keywords = ["a2a", "payments", "ai-agents", "fas-1", "iso20022", "pay-uri", "xrpl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pydantic>=2.10.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://dnsofmoney.com"
Specification = "https://github.com/dnsofmoney/dns-of-money"
Source = "https://github.com/dnsofmoney/a2a-protocol-core"

[project.optional-dependencies]
# The one-call pay-path (pay_alias_xrp) signs an XRP payment with the caller's own
# wallet — that needs xrpl-py. Kept optional so the base package stays dep-light
# (resolve/hash/attest work without it).
xrpl = [
    "xrpl-py>=2.5.0",
]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_protocol_core"]

# Explicit allowlist so a manual sdist build in a dirty working dir can never
# sweep in stray untracked files (e.g. a local venv). CI builds from a clean
# checkout, but this keeps hand-built sdists deterministic too.
[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "examples/",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 120
